--- a/index.html
+++ b/index.html
@@ -2,13 +2,11 @@
 <head>
 <style>
 h1 {text-align: center;}
-p {text-align: center;}
-div {text-align: center;}
 </style>
 </head>
 <body>
 
-<h1>This is a heading</h1>
+<h1>UDAY'S RESUME</h1>
 <p>This is a paragraph.</p>
 <div>This is a div.</div>
 
