--- a/index.html
+++ b/index.html
@@ -1,14 +1,1 @@
-<html>
-<head>
-<style>
-h1 {text-align: center;}
-</style>
-</head>
-<body>
-
-<h1>UDAY'S RESUME</h1>
-<p>This is a paragraph.</p>
-<div>This is a div.</div>
-
-</body>
-</html>
+<p>&nbsp;<b>Balijepalli Venkata Vinay Uday Sankar</b></p><p><b>Mail id:</b>mailforuday.balijepalli@gmail.com</p><p><b>Address :&nbsp;</b>D.No 16-1-110, sivalayam street,Gujarathipeta,Srikakulam&nbsp;</p><p><b>Contact no:</b>&nbsp;9866748010&nbsp;</p><p>&nbsp;</p><p><b>Career Objective:</b>&nbsp;Looking for a competitive and challenging job, which will be beneficial to both for organization and myself. By using my knowledge, I will prove myself and understand the functionality and work towards the growth of the organization.&nbsp;</p><p>&nbsp;</p><p><b>Academic Qualifications:&nbsp;</b></p><p>&nbsp;----&gt;&nbsp; B.Tech C.S.E, Jawaharlal Nehru Technological University Kakinada ,Sri Sivani college of engineering with 6.7 CGPA in the year 2021.&nbsp;</p><p>-----&gt; Intermediate ,M.P.C&nbsp; in Sri Chaitanya junior kalasala with 94.7% 2017.</p><p>----&gt; SSC in New central school,srikakulam with 8.7 GPA in the year 2015.&nbsp;</p><p><b>Final Year Project:</b>&nbsp;</p><p><b>Title : visualization and forecasting of the covid -19 second strain in telugu states.</b>&nbsp;</p><p><b>Description :</b>&nbsp;Aim is to visualize the growth of the covid -19 second strain data.so as to conclude whether the situation is under control or not and to forecast the next few days using the Prophet model.&nbsp;</p><p>&nbsp;</p><p><b>Technical skills:</b></p><p> Programming languages : C, Java, Python, SQL,R&nbsp;</p><p> Operating systems : Windows, Linux</p><p> Packages : MS office</p><p> Scripting languages : HTML.&nbsp;&nbsp;</p><p><b>Other Achievements:</b></p><p> Scored 89% in TCS NQT which was held in February 2021 in numerical and verbal ability round and scored 32 out of 60 in coding round.</p><p><b>Hobbies:</b></p><p> Browsing internet</p><p> Cooking</p><p> Listening music&nbsp;</p><p> Knowing new technologies.</p><p><b>Strengths:</b></p><p> Positive attitude&nbsp;</p><p> Problem solving&nbsp;</p><p> Flexible and adaptable to the environment&nbsp;</p><p> Good team and individual player.&nbsp;</p><p>&nbsp;</p><p></p><p><b>Personal details:</b></p><p> Fathers name : Balijepalli Venkata Seetharama Swamy</p><p> Mothers name : Balijepalli Madhavilatha&nbsp;</p><p> Date of birth : 02-08-2000&nbsp;</p><p> Nationality : Indian&nbsp;</p><p> Marital status : Unmarried&nbsp;</p><p> Languages known : Telugu,English,Moderate Hindi&nbsp;</p>
