--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <p>----&gt; SSC in New central school,srikakulam with 8.7 GPA in the year 2015.&nbsp;</p>
 <p><b>Final Year Project:</b>&nbsp;</p><p><b>Title : visualization and forecasting of the covid -19 second strain in telugu states.</b>&nbsp;</p>
 <p><b>Description :</b>&nbsp;Aim is to visualize the growth of the covid -19 second strain data.so as to conclude whether the situation is under control or not and to forecast the next few days using the Prophet model.&nbsp;</p>
-<p>&nbsp;</p><p><b>Technical skills:</b></p>
+<p><b>Technical skills:</b></p>
 <p> Programming languages : C, Java, Python, SQL,R&nbsp;</p>
 <p> Operating systems : Windows, Linux</p>
 <p> Packages : MS office</p>
