--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <p><b>Address :&nbsp;</b>D.No 16-1-110, sivalayam street,Gujarathipeta,Srikakulam&nbsp;</p>
 <p><b>Contact no:</b>&nbsp;9866748010&nbsp;</p>
 <p><b>Career Objective:</b>&nbsp;Looking for a competitive and challenging job, which will be beneficial to both for organization and myself. By using my knowledge, I will prove myself and understand the functionality and work towards the growth of the organization.&nbsp;</p>
-<p>&nbsp;</p><p><b>Academic Qualifications:&nbsp;</b></p>
+<p><b>Academic Qualifications:&nbsp;</b></p>
 <p>&nbsp;----&gt;&nbsp; B.Tech C.S.E, Jawaharlal Nehru Technological University Kakinada ,Sri Sivani college of engineering with 6.7 CGPA in the year 2021.&nbsp;</p>
 <p>-----&gt; Intermediate ,M.P.C&nbsp; in Sri Chaitanya junior kalasala with 94.7% 2017.</p>
 <p>----&gt; SSC in New central school,srikakulam with 8.7 GPA in the year 2015.&nbsp;</p>
