--- a/index.html
+++ b/index.html
@@ -1,32 +1,189 @@
-<p>&nbsp;<b>Balijepalli Venkata Vinay Uday Sankar</b></p>
-<p><b>Mail id:</b>mailforuday.balijepalli@gmail.com</p>
-<p><b>Address :&nbsp;</b>D.No 16-1-110, sivalayam street,Gujarathipeta,Srikakulam&nbsp;</p>
-<p><b>Contact no:</b>&nbsp;9866748010&nbsp;</p>
-<p><b>Career Objective:</b>&nbsp;Looking for a competitive and challenging job, which will be beneficial to both for organization and myself. By using my knowledge, I will prove myself and understand the functionality and work towards the growth of the organization.&nbsp;</p>
-<p><b>Academic Qualifications:&nbsp;</b></p>
-<p>&nbsp;----&gt;&nbsp; B.Tech C.S.E, Jawaharlal Nehru Technological University Kakinada ,Sri Sivani college of engineering with 6.7 CGPA in the year 2021.&nbsp;</p>
-<p>-----&gt; Intermediate ,M.P.C&nbsp; in Sri Chaitanya junior kalasala with 94.7% 2017.</p>
-<p>----&gt; SSC in New central school,srikakulam with 8.7 GPA in the year 2015.&nbsp;</p>
-<p><b>Final Year Project:</b>&nbsp;</p><p><b>Title : visualization and forecasting of the covid -19 second strain in telugu states.</b>&nbsp;</p>
-<p><b>Description :</b>&nbsp;Aim is to visualize the growth of the covid -19 second strain data.so as to conclude whether the situation is under control or not and to forecast the next few days using the Prophet model.&nbsp;</p>
-<p><b>Technical skills:</b></p>
-<p> Programming languages : C, Java, Python, SQL,R&nbsp;</p>
-<p> Operating systems : Windows, Linux</p>
-<p> Packages : MS office</p>
-<p> Scripting languages : HTML.&nbsp;&nbsp;</p>
-<p><b>Hobbies:</b></p>
-<p> Browsing internet</p><p> Cooking</p>
-<p> Listening music&nbsp;</p>
-<p> Knowing new technologies.</p>
-<p><b>Strengths:</b></p>
-<p> Positive attitude&nbsp;</p>
-<p> Problem solving&nbsp;</p>
-<p> Flexible and adaptable to the environment&nbsp;</p>
-<p> Good team and individual player.&nbsp;</p>
-<p><b>Personal details:</b></p>
-<p> Fathers name : Balijepalli Venkata Seetharama Swamy</p>
-<p> Mothers name : Balijepalli Madhavilatha&nbsp;</p>
-<p> Date of birth : 02-08-2000&nbsp;</p>
-<p> Nationality : Indian&nbsp;</p>
-<p> Marital status : Unmarried&nbsp;</p>
-<p> Languages known : Telugu,English,Moderate Hindi&nbsp;</p>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Uday Sankar Website</title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"/>
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/typed.js/2.0.11/typed.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/waypoints/4.0.1/jquery.waypoints.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css"/>
+
+</head>
+<body>
+    <div class="scroll-up-btn">
+        <i class="fas fa-angle-up"></i>
+    </div>
+    <nav class="navbar">
+        <div class="max-width">
+            <div class="logo"><a href="#">Uday Sankar<span>.Balijepalli</span></a></div>
+            <ul class="menu">
+                <li><a href="#home" class="menu-btn">Home</a></li>
+                <li><a href="#about" class="menu-btn">About</a></li>
+                <li><a href="#skills" class="menu-btn">Skills</a></li>
+                <li><a href="#contact" class="menu-btn">Contact</a></li>
+            </ul>
+            <div class="menu-btn">
+                <i class="fas fa-bars"></i>
+            </div>
+        </div>
+    </nav>
+
+    <!-- home section start -->
+    <section class="home" id="home">
+        <div class="max-width">
+            <div class="home-content">
+                <div class="text-1">Hello, my name is</div>
+                <div class="text-2">Uday Sankar</div>
+                <div class="text-3">And I'm a <span class="typing"></span></div>
+                <a href="#">Hire me</a>
+            </div>
+        </div>
+    </section>
+
+    <!-- about section start -->
+    <section class="about" id="about">
+        <div class="max-width">
+            <h2 class="title">About me</h2>
+            <div class="about-content">
+                <div class="column left">
+                    <img src="images/about picture.jpg" alt="">
+                </div>
+                <div class="column right">
+                    <div class="text">I'm Uday Sankar and I'm a <span class="typing-2"></span></div>
+                    <p>I am a B-tech Graduate,Fresher currently Searching a challenging position in a reputable organization to expand and utilize my learning, skills and knowledge. Possess excellent communication skills and have an eye for detail. Flexible to work in any environment as required.</p>
+                    <a href="https://drive.google.com/file/d/1uXcyrdwaYCKRWad4LcuIQ9BdL99XCImL/view">Download CV</a>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- skills section start -->
+    <section class="skills" id="skills">
+        <div class="max-width">
+            <h2 class="title">My skills</h2>
+            <div class="skills-content">
+                <div class="column left">
+                    <div class="bars">
+                        <div class="info">
+                            <span>C</span>
+                            <span>90%</span>
+                        </div>
+                        <div class="line C"></div>
+                    </div>
+                    <div class="bars">
+                        <div class="info">
+                            <span>C++</span>
+                            <span>80%</span>
+                        </div>
+                        <div class="line Cpp"></div>
+                    </div>
+                    <div class="bars">
+                        <div class="info">
+                            <span>Java</span>
+                            <span>60%</span>
+                        </div>
+                        <div class="line Java"></div>
+                    </div>
+                    <div class="bars">
+                        <div class="info">
+                            <span>Python</span>
+                            <span>60%</span>
+                        </div>
+                        <div class="line Python"></div>
+                    </div>
+                    <div class="bars">
+                        <div class="info">
+                            <span>R</span>
+                            <span>50%</span>
+                        </div>
+                        <div class="line R"></div>
+                    </div>
+                </div>
+                <div class="column right">
+                    <div class="bars">
+                        <div class="info">
+                            <span>HTML</span>
+                            <span>80%</span>
+                        </div>
+                        <div class="line html"></div>
+                    </div>
+                    <div class="bars">
+                        <div class="info">
+                            <span>CSS</span>
+                            <span>70%</span>
+                        </div>
+                        <div class="line css"></div>
+                    </div>
+                    <div class="bars">
+                        <div class="info">
+                            <span>JavaScript</span>
+                            <span>50%</span>
+                        </div>
+                        <div class="line js"></div>
+                    </div>
+                    <div class="bars">
+                        <div class="info">
+                            <span>PHP</span>
+                            <span>50%</span>
+                        </div>
+                        <div class="line php"></div>
+                    </div>
+                    <div class="bars">
+                        <div class="info">
+                            <span>MySQL</span>
+                            <span>70%</span>
+                        </div>
+                        <div class="line mysql"></div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- contact section start -->
+    <section class="contact" id="contact">
+        <div class="max-width">
+            <h2 class="title">Contact me</h2>
+            <div class="contact-content">
+                <div class="column left">
+                    <div class="text">Get in Touch</div>
+                    <div class="icons">
+                        <div class="row">
+                            <i class="fas fa-user"></i>
+                            <div class="info">
+                                <div class="head">Name</div>
+                                <div class="sub-title">Uday Sankar</div>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <i class="fas fa-map-marker-alt"></i>
+                            <div class="info">
+                                <div class="head">Address</div>
+                                <div class="sub-title">Srikakulam,Andhra Pradesh</div>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <i class="fas fa-envelope"></i>
+                            <div class="info">
+                                <div class="head">Email</div>
+                                <div class="sub-title">mailforuday.balijepalli@gmail.com</div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- footer section start -->
+    <footer>
+        <span>Created By Uday Sankar  | <a href="https://www.instagram.com/uday_sankar_504/">Instagram</a> | <a href="https://www.linkedin.com/in/balijepalli-venkata-vinay-uday-sankar-5ab618177/">Linkedin</a>  </span>
+    </footer>
+
+    <script src="script.js"></script>
+</body>
+</html>
