--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             <h2 class="title">About me</h2>
             <div class="about-content">
                 <div class="column left">
-                    <img src="images/about picture.jpg" alt="">
+                    <img src="about picture.jpg" alt="">
                 </div>
                 <div class="column right">
                     <div class="text">I'm Uday Sankar and I'm a <span class="typing-2"></span></div>
