--- a/index.html
+++ b/index.html
@@ -173,6 +173,13 @@
                                 <div class="sub-title">mailforuday.balijepalli@gmail.com</div>
                             </div>
                         </div>
+                        <div class="row">
+                            <i class="fas fa-phone-alt"></i>
+                            <div class="info">
+                                <div class="head">Phone</div>
+                                <div class="sub-title">9866748010</div>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
