--- a/index.html
+++ b/index.html
@@ -182,6 +182,33 @@
                         </div>
                     </div>
                 </div>
+                <div class="column right">
+                    <div class="text">Message me</div>
+                    <form action="https://formspree.io/f/mwkadzdb" method="POST">
+                        <div class="fields">
+                            <div class="field name">
+				<label for="name"<name></label>
+                                <input type="text" placeholder="Name" required name="name">
+                            </div>
+                            <div class="field email">
+				<label for="email"<email></label>
+                                <input type="email" placeholder="Email" name="Email" required>
+                            </div>
+                        </div>
+                        <div class="field">
+			    <label for="subject"<subject></label>
+                            <input type="text" placeholder="Subject" name="subject" required>
+                        </div>
+                        <div class="field textarea">
+			    <label for="name"<message></label>
+                            <textarea cols="30" rows="10" placeholder="Message.." name="message" required></textarea>
+                        </div>
+                        <div class="button-area">
+                            <button type="submit">Send message</button>
+                        </div>
+                    </form>
+                </div>
+
             </div>
         </div>
     </section>
