--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                 <div class="column right">
                     <div class="text">I'm Uday Sankar and I'm a <span class="typing-2"></span></div>
                     <p>I am a B-tech Graduate,Fresher currently Searching a challenging position in a reputable organization to expand and utilize my learning, skills and knowledge. Possess excellent communication skills and have an eye for detail. Flexible to work in any environment as required.</p>
-                    <a href="https://drive.google.com/file/d/1uXcyrdwaYCKRWad4LcuIQ9BdL99XCImL/view">Download CV</a>
+                    <a href="https://drive.google.com/file/d/1ZlRI9vp2fTi27lKj-AP7pRW8U6jZrb6_/view?usp=sharing">Download CV</a>
                 </div>
             </div>
         </div>
