--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                 </div>
                 <div class="column right">
                     <div class="text">I'm Uday Sankar and I'm a <span class="typing-2"></span></div>
-                    <p>I am a B-tech Graduate,Fresher currently Searching a challenging position in a reputable organization to expand and utilize my learning, skills and knowledge. Possess excellent communication skills and have an eye for detail. Flexible to work in any environment as required.</p>
+                    <p>I am a Dedicated and performance driven Software Engineer with proactive approach and determination to successfully finish all assigned tasks within schedule. Effective team player offering extraordinary analytical skills and ability to think creatively. Possess excellent communication skills and have an eye for detail. Flexible to work in any environment as required.</p>
                     <a href="https://drive.google.com/file/d/1ZlRI9vp2fTi27lKj-AP7pRW8U6jZrb6_/view?usp=sharing">Download CV</a>
                 </div>
             </div>
@@ -69,14 +69,14 @@
                 <div class="column left">
                     <div class="bars">
                         <div class="info">
-                            <span>C</span>
+                            <span>Docker</span>
                             <span>90%</span>
                         </div>
                         <div class="line C"></div>
                     </div>
                     <div class="bars">
                         <div class="info">
-                            <span>C++</span>
+                            <span>Kubernetes</span>
                             <span>80%</span>
                         </div>
                         <div class="line Cpp"></div>
