--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                 </div>
                 <div class="column right">
                     <div class="text">I'm Uday Sankar and I'm a <span class="typing-2"></span></div>
-                    <p>I am a Dedicated and performance driven Software Engineer with proactive approach and determination to successfully finish all assigned tasks within schedule. Effective team player offering extraordinary analytical skills and ability to think creatively. Possess excellent communication skills and have an eye for detail. Flexible to work in any environment as required.</p>
+                    <p>Motivated DevOps Engineer with 2 years of progressive experience in Build, Deployment , Environment set-up , Configuration and Release management . Worked on various tools , Which include Build tools Gradle , Version Control Tools 8-GIT and Servers - Apache Tomcat </p>
                     <a href="https://drive.google.com/file/d/1ZlRI9vp2fTi27lKj-AP7pRW8U6jZrb6_/view?usp=sharing">Download CV</a>
                 </div>
             </div>
@@ -70,35 +70,35 @@
                     <div class="bars">
                         <div class="info">
                             <span>Docker</span>
-                            <span>90%</span>
+                            <span>70%</span>
                         </div>
                         <div class="line C"></div>
                     </div>
                     <div class="bars">
                         <div class="info">
                             <span>Kubernetes</span>
-                            <span>80%</span>
+                            <span>60%</span>
                         </div>
                         <div class="line Cpp"></div>
                     </div>
                     <div class="bars">
                         <div class="info">
-                            <span>Java</span>
+                            <span>GIT</span>
                             <span>60%</span>
                         </div>
                         <div class="line Java"></div>
                     </div>
                     <div class="bars">
                         <div class="info">
-                            <span>Python</span>
-                            <span>60%</span>
+                            <span>Helm-Charts</span>
+                            <span>70%</span>
                         </div>
                         <div class="line Python"></div>
                     </div>
                     <div class="bars">
                         <div class="info">
-                            <span>R</span>
-                            <span>50%</span>
+                            <span>PostgreSQL</span>
+                            <span>75%</span>
                         </div>
                         <div class="line R"></div>
                     </div>
