--- a/index.html
+++ b/index.html
@@ -72,35 +72,35 @@
                             <span>Docker</span>
                             <span>70%</span>
                         </div>
-                        <div class="line C"></div>
+                        <div class="line Docker"></div>
                     </div>
                     <div class="bars">
                         <div class="info">
                             <span>Kubernetes</span>
                             <span>60%</span>
                         </div>
-                        <div class="line Cpp"></div>
+                        <div class="line Kubernetes"></div>
                     </div>
                     <div class="bars">
                         <div class="info">
                             <span>GIT</span>
                             <span>60%</span>
                         </div>
-                        <div class="line Java"></div>
+                        <div class="line GIT"></div>
                     </div>
                     <div class="bars">
                         <div class="info">
                             <span>Helm-Charts</span>
                             <span>70%</span>
                         </div>
-                        <div class="line Python"></div>
+                        <div class="line Helm-Charts"></div>
                     </div>
                     <div class="bars">
                         <div class="info">
                             <span>PostgreSQL</span>
                             <span>75%</span>
                         </div>
-                        <div class="line R"></div>
+                        <div class="line PostgreSQL"></div>
                     </div>
                 </div>
                 
